# symbolic_regression_tdc_demo

./: .gitignore  LICENSE  README.md  pyproject.toml
Datasets/House_prices/proceed/: test_experiment_features.csv  train_experiment_features.csv
Datasets/Titanic/proceed/: experiment_features.csv  test_experiment_features.csv  train_experiment_features.csv
Datasets/Titanic/raw/: test.csv
examples/: gplearn_deterministic.py  pysr_custom_operator.py  pysr_deterministic.py  simple_gplearn_classifier.py  simple_pysr.py  simple_turingbot.py
notebooks/: house_prices_preprocessing.ipynb  titanic_preprocessing.ipynb
sr/: __init__.py  base_model.py  cli.py  dataset.py  equation_parser.py  exceptions.py  predictor.py  utils.py
sr/gplearn_demo/: classifier_model.py  model.py  operators.py  parser.py  pyproject.toml  regressor_model.py
sr/pysr_demo/: model.py  operators.py  parser.py
sr/turingbot_demo/: allow_target_delay_enum.py  bound_search_mode_enum.py  force_all_variables_enum.py  integer_constants_enum.py  model.py  operator_enum.py  search_metric_enum.py  test_sample_enum.py  train_test_split_enum.py  utils.py
tests/: conftest.py
tests/gplearn/: test_gplearn_model.py
tests/pysr/: test_pysr_model.py
