[tool.poetry]
name = "gplearn-demo"
version = "0.1.0"
description = ""
authors = ["Janael Pinheiro <ajanaelpinheiro@gmail.com>"]
readme = "README.md"
packages = [{include = "gplearn_demo"}]

[tool.poetry.dependencies]
python = "^3.10"
gplearn = "^0.4.2"
pandas = "^1.5.3"
sympy = "^1.11.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
